keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes, cloud manager, NetApp Console' 
summary: Scopri le novità di Amazon FSx for NetApp ONTAP. 
---
= Novità di Amazon FSx for NetApp ONTAP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le novità di FSx per ONTAP.



== 11 novembre 2025



=== Supporto per la replica tra sistemi ONTAP locali e file system FSx per ONTAP

La replica dei dati è disponibile tra un sistema ONTAP locale e un file system FSx for ONTAP dalla pagina Sistemi NetApp Console .

link:https://docs.netapp.com/us-en/storage-management-fsx-ontap/use/task-manage-fsx-systems.html#replicate-data["Replicare i dati"]



== 06 ottobre 2025



=== BlueXP è ora NetApp Console

NetApp Console, basata sulle fondamenta BlueXP migliorate e ristrutturate, offre una gestione centralizzata dello storage NetApp e NetApp Data Services in ambienti on-premise e cloud di livello aziendale, offrendo informazioni in tempo reale, flussi di lavoro più rapidi e un'amministrazione semplificata, il tutto in modo altamente sicuro e conforme.

Per i dettagli su cosa è cambiato, vederelink:https://docs.netapp.com/us-en/console-relnotes/index.html["Note sulla versione NetApp Console ."^]



== 03 agosto 2025



=== Miglioramenti alla scheda Relazioni di replicazione

Abbiamo aggiunto diverse nuove colonne alla tabella delle relazioni di replicazione per fornirti maggiori informazioni sulle relazioni di replicazione nella scheda *Relazioni di replicazione*. La tabella ora include le seguenti colonne:

* Politica SnapMirror
* File system sorgente
* File system di destinazione
* Stato della relazione
* Ultimo orario di trasferimento




== 14 luglio 2025



=== Supporto per la replica dei dati tra due file system FSx per ONTAP

La replica dei dati è ora disponibile tra due file system FSx per ONTAP dalla canvas nella console BlueXP .
